--- a/src/gui/configurationDialog.ui
+++ b/src/gui/configurationDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>483</width>
-    <height>447</height>
+    <width>481</width>
+    <height>445</height>
    </rect>
   </property>
   <layout class="QVBoxLayout">
@@ -835,6 +835,12 @@
                 <item>
                  <widget class="QTextBrowser" name="deltaTAlgorithmDescription">
                   <property name="autoFillBackground">
+                   <bool>true</bool>
+                  </property>
+                  <property name="openExternalLinks">
+                   <bool>true</bool>
+                  </property>
+                  <property name="openLinks">
                    <bool>true</bool>
                   </property>
                  </widget>
