--- a/plugins/Oculars/resources/normalStyle.css
+++ b/plugins/Oculars/resources/normalStyle.css
@@ -45,10 +45,14 @@ QTabWidget::pane {
 	border-top: none;
 }
 
-QPushButton#pushButtonMoveSensorUp, QPushButton#pushButtonMoveOcularUp, QPushButton#pushButtonMoveTelescopeUp, QPushButton#pushButtonMoveBarlowUp {
+QPushButton#pushButtonMoveSensorUp, QPushButton#pushButtonMoveOcularUp, QPushButton#pushButtonMoveTelescopeUp, QPushButton#pushButtonMoveLensUp {
         image: url(:/graphicGui/spinup.png);
 }
 
-QPushButton#pushButtonMoveSensorDown, QPushButton#pushButtonMoveOcularDown, QPushButton#pushButtonMoveTelescopeDown, QPushButton#pushButtonMoveBarlowDown {
+QPushButton#pushButtonMoveSensorDown, QPushButton#pushButtonMoveOcularDown, QPushButton#pushButtonMoveTelescopeDown, QPushButton#pushButtonMoveLensDown {
         image: url(:/graphicGui/spindown.png);
+}
+
+QLabel#lensNote {
+        margin-left: 5px;
 }
