--- a/plugins/Oculars/src/gui/ocularDialog.ui
+++ b/plugins/Oculars/src/gui/ocularDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>615</width>
-    <height>394</height>
+    <width>659</width>
+    <height>379</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -141,7 +141,7 @@
       <item>
        <widget class="QTabWidget" name="Tabs">
         <property name="currentIndex">
-         <number>3</number>
+         <number>2</number>
         </property>
         <property name="usesScrollButtons">
          <bool>false</bool>
@@ -596,9 +596,9 @@
           </item>
          </layout>
         </widget>
-        <widget class="QWidget" name="BarlowLenses">
+        <widget class="QWidget" name="Lense">
          <attribute name="title">
-          <string>Barlow lenses</string>
+          <string>Lense</string>
          </attribute>
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <property name="spacing">
@@ -617,7 +617,7 @@
            <number>12</number>
           </property>
           <item>
-           <widget class="QFrame" name="BarlowInfoFrame">
+           <widget class="QFrame" name="LensInfoFrame">
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
             </property>
@@ -637,12 +637,12 @@
                 <bool>true</bool>
                </property>
                <property name="text">
-                <string>Barlows</string>
+                <string>Lense</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QListView" name="barlowListView">
+              <widget class="QListView" name="lensListView">
                <property name="editTriggers">
                 <set>QAbstractItemView::NoEditTriggers</set>
                </property>
@@ -679,7 +679,7 @@
                  <number>0</number>
                 </property>
                 <item>
-                 <widget class="QPushButton" name="addBarlow">
+                 <widget class="QPushButton" name="addLens">
                   <property name="minimumSize">
                    <size>
                     <width>0</width>
@@ -692,7 +692,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="pushButtonMoveBarlowUp">
+                 <widget class="QPushButton" name="pushButtonMoveLensUp">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                     <horstretch>0</horstretch>
@@ -708,7 +708,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="pushButtonMoveBarlowDown">
+                 <widget class="QPushButton" name="pushButtonMoveLensDown">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                     <horstretch>0</horstretch>
@@ -724,7 +724,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="deleteBarlow">
+                 <widget class="QPushButton" name="deleteLens">
                   <property name="minimumSize">
                    <size>
                     <width>0</width>
@@ -743,7 +743,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QFrame" name="BarlowData">
+           <widget class="QFrame" name="LensData">
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
             </property>
@@ -774,7 +774,7 @@
                  </widget>
                 </item>
                 <item row="0" column="1">
-                 <widget class="QLineEdit" name="barlowName">
+                 <widget class="QLineEdit" name="lensName">
                   <property name="maxLength">
                    <number>50</number>
                   </property>
@@ -788,13 +788,41 @@
                  </widget>
                 </item>
                 <item row="1" column="1">
-                 <widget class="QLineEdit" name="barlowMultipler">
-                  <property name="maxLength">
-                   <number>5</number>
+                 <widget class="QLineEdit" name="lensMultipler">
+                  <property name="inputMethodHints">
+                   <set>Qt::ImhDigitsOnly</set>
                   </property>
                  </widget>
                 </item>
                </layout>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="lensNote">
+               <property name="toolTip">
+                <string notr="true"/>
+               </property>
+               <property name="statusTip">
+                <string notr="true"/>
+               </property>
+               <property name="accessibleName">
+                <string notr="true"/>
+               </property>
+               <property name="accessibleDescription">
+                <string notr="true"/>
+               </property>
+               <property name="text">
+                <string>Values of multiplicity &gt;1 expand the focal length (Barlow lens). Values of multiplicity &lt;1 reduce the focal length (Shapley lens).</string>
+               </property>
+               <property name="textFormat">
+                <enum>Qt::AutoText</enum>
+               </property>
+               <property name="scaledContents">
+                <bool>false</bool>
+               </property>
+               <property name="wordWrap">
+                <bool>true</bool>
+               </property>
               </widget>
              </item>
              <item>
