new lines for translation

--- a/data/gui/normalStyle.css
+++ b/data/gui/normalStyle.css
@@ -166,7 +166,7 @@ QTextBrowser#helpBrowser,QTextBrowser#aboutBrowser {
 	padding-left:11px;
 }
 
-QTextBrowser#deltaTAlgorithmDescription {
+QTextBrowser#deltaTAlgorithmDescription, QTextBrowser#projectionTextBrowser {
         background: transparent;
         padding: 0px;
         margin: 0px;
