--- a/plugins/Satellites/src/gui/satellitesDialog.ui
+++ b/plugins/Satellites/src/gui/satellitesDialog.ui
@@ -139,95 +139,101 @@
        <item>
         <widget class="QGroupBox" name="updatesGroup">
          <property name="title">
-          <string>Update TLE lists from Internet sources</string>
+          <string>Updates</string>
          </property>
-         <property name="flat">
-          <bool>true</bool>
-         </property>
-         <property name="checkable">
-          <bool>false</bool>
-         </property>
-         <layout class="QVBoxLayout" name="verticalLayout_12">
+         <layout class="QGridLayout" name="updatesGridLayout">
           <property name="margin">
            <number>0</number>
           </property>
-          <item>
-           <widget class="QCheckBox" name="internetUpdatesCheckbox">
-            <property name="text">
-             <string>Update from Internet sources</string>
+          <item row="3" column="2">
+           <widget class="QSpinBox" name="updateFrequencySpinBox">
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>9999</number>
+            </property>
+            <property name="value">
+             <number>1</number>
             </property>
            </widget>
           </item>
-          <item>
-           <layout class="QGridLayout" name="gridLayout">
-            <item row="0" column="0">
-             <widget class="QLabel" name="label_7">
-              <property name="text">
-               <string>Last update:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="2">
-             <widget class="QDateTimeEdit" name="lastUpdateDateTimeEdit">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="frame">
-               <bool>false</bool>
-              </property>
-              <property name="buttonSymbols">
-               <enum>QAbstractSpinBox::NoButtons</enum>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="0">
-             <widget class="QLabel" name="label_9">
-              <property name="text">
-               <string>Update frequency (hours):</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="2">
-             <widget class="QSpinBox" name="updateFrequencySpinBox">
-              <property name="minimum">
-               <number>1</number>
-              </property>
-              <property name="maximum">
-               <number>9999</number>
-              </property>
-              <property name="value">
-               <number>1</number>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="0">
-             <widget class="QLabel" name="nextUpdateLabel">
-              <property name="text">
-               <string notr="true">[next update info]</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="1">
-             <spacer name="horizontalSpacer">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>17</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item row="2" column="2">
-             <widget class="QPushButton" name="updateButton">
-              <property name="text">
-               <string>Update now</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
+          <item row="4" column="0" colspan="5">
+           <widget class="QLabel" name="nextUpdateLabel">
+            <property name="text">
+             <string notr="true">[next update info]</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>Last update:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0" colspan="4">
+           <widget class="QCheckBox" name="internetUpdatesCheckbox">
+            <property name="text">
+             <string>Update satellite data from Internet sources</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1" rowspan="2">
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>17</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="2" column="3" rowspan="2">
+           <widget class="QPushButton" name="updateButton">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>Update now</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="2">
+           <widget class="QDateTimeEdit" name="lastUpdateDateTimeEdit">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="frame">
+             <bool>false</bool>
+            </property>
+            <property name="buttonSymbols">
+             <enum>QAbstractSpinBox::NoButtons</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QLabel" name="updateFrequencyLabel">
+            <property name="text">
+             <string>Update frequency (hours):</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0" colspan="4">
+           <widget class="QCheckBox" name="checkBoxAutoRemove">
+            <property name="text">
+             <string>On update, remove the satellites that are no longer listed in the update sources</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -247,14 +253,14 @@
           <property name="margin">
            <number>0</number>
           </property>
-          <item row="0" column="0">
+          <item row="1" column="0">
            <widget class="QLabel" name="label_10">
             <property name="text">
              <string>Label font size (pixels):</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="1">
+          <item row="1" column="1">
            <widget class="QSpinBox" name="fontSizeSpinBox">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -789,9 +795,10 @@
  <tabstops>
   <tabstop>tabs</tabstop>
   <tabstop>internetUpdatesCheckbox</tabstop>
+  <tabstop>checkBoxAutoRemove</tabstop>
+  <tabstop>updateButton</tabstop>
   <tabstop>lastUpdateDateTimeEdit</tabstop>
   <tabstop>updateFrequencySpinBox</tabstop>
-  <tabstop>updateButton</tabstop>
   <tabstop>labelsGroup</tabstop>
   <tabstop>fontSizeSpinBox</tabstop>
   <tabstop>orbitLinesGroup</tabstop>
