--- a/plugins/Satellites/src/gui/satellitesDialog.ui
+++ b/plugins/Satellites/src/gui/satellitesDialog.ui
@@ -120,7 +120,7 @@
    <item>
     <widget class="QTabWidget" name="tabs">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <property name="documentMode">
       <bool>false</bool>
@@ -469,7 +469,7 @@
        <item>
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
-          <widget class="QComboBox" name="groupsCombo"/>
+          <widget class="QComboBox" name="groupFilterCombo"/>
          </item>
          <item>
           <widget class="QLineEdit" name="lineEditSearch"/>
@@ -681,17 +681,11 @@
             </widget>
            </item>
            <item>
-            <widget class="QTextEdit" name="groupsTextEdit">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-               <horstretch>0</horstretch>
-               <verstretch>20</verstretch>
-              </sizepolicy>
+            <widget class="QListWidget" name="groupsListWidget">
+             <property name="editTriggers">
+              <set>QAbstractItemView::CurrentChanged|QAbstractItemView::SelectedClicked</set>
              </property>
-             <property name="toolTip">
-              <string>Comma separated list of groups</string>
-             </property>
-             <property name="readOnly">
+             <property name="isWrapping" stdset="0">
               <bool>true</bool>
              </property>
             </widget>
@@ -846,7 +840,7 @@
   <tabstop>orbitFadeSpin</tabstop>
   <tabstop>restoreDefaultsButton</tabstop>
   <tabstop>saveSettingsButton</tabstop>
-  <tabstop>groupsCombo</tabstop>
+  <tabstop>groupFilterCombo</tabstop>
   <tabstop>lineEditSearch</tabstop>
   <tabstop>satellitesList</tabstop>
   <tabstop>nameEdit</tabstop>
@@ -854,7 +848,7 @@
   <tabstop>displayedCheckbox</tabstop>
   <tabstop>orbitCheckbox</tabstop>
   <tabstop>descriptionTextEdit</tabstop>
-  <tabstop>groupsTextEdit</tabstop>
+  <tabstop>groupsListWidget</tabstop>
   <tabstop>tleFirstLineEdit</tabstop>
   <tabstop>tleSecondLineEdit</tabstop>
   <tabstop>addSatellitesButton</tabstop>
