--- a/data/gui/nightStyle.css
+++ b/data/gui/nightStyle.css
@@ -540,7 +540,7 @@ QCheckBox::indicator:checked {
 
 QCheckBox::indicator:indeterminate {
 	image: url(:/graphicGui/nv_checkbox-partial.png);
-]
+}
 
 QCheckBox::indicator:unchecked {
 	image: url(:/graphicGui/nv_checkbox-unchecked.png);
